--- a/src/index.scss
+++ b/src/index.scss
@@ -12,10 +12,6 @@ main {
   }
 }
 
-input {
-  padding: 0.5em;
-}
-
 input:focus {
   border: $color-blue;
 }
